--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="yWILaCW110-OiD-b72WjSmPRBEF6SeFRZrU7hPfh_9U" />
-    <title>Dennis' Site</title>
+    <title>Browserkun</title>
 </head>
 <body>
-    Hello World!
+    <h2>Hi! I'm Dennis, the developer behind Browserkun.</h2>
+    <h3>Projects</h3>
+    <ul>
+        <li><a href="https://workspace.google.com/marketplace/app/plusplus/441509248986">PlusPlus</a></li>
+        <li><a href="https://chrome.google.com/webstore/detail/backgrounds-for-chrome-ch/pehkblbamonighkbeeblaolnpcdpegoe?hl=en&authuser=1">Backgrounds For Chrome-Chan</a></li>
+    </ul>
+    <h3>Contact</h3>
+    For any business related inquiries, reach me at browserkun@gmail.com
 </body>
 </html>
